...
    }
}

//для UI-кода
struct Profile {
    let username: String
    let name: String
    let loginName: String
    var bio: String
    
    init(from body: ProfileResult) {
        self.username = body.username
        self.name = "\(body.firstName) \(body.lastName)"
...
